--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
     "jest": "^29.6.3",
-    "nodemon": "2.0.15",
-    "ts-node": "^10.9.1"
+    "nodemon": "2.0.15"
   },
   "repository": "https://github.com/ImVladislav/node.git"
 }
