--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
     "jest": "^29.6.3",
     "nodemon": "2.0.15"
   },
-  "repository": "https://github.com/ImVladislav/node.git"
+  "repository": "https://github.com/ImVladislav/beauty-blossom-backend.git"
 }
