--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "node",
   "version": "1.0.0",
-  "main": "app.js",
-  "private": false,
+  "private": true,
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
