--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.4",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "xml2js": "^0.6.2"
   },
   "engines": {
     "node": ">=14.20.1"
