--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
+    "axios": "^1.5.1",
     "express": "^4.18.2",
     "gravatar": "^1.8.2",
     "joi": "^17.7.1",
